# physical-cpu-count

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cppcheck.supp  cpu_count.cpp
.github/workflows/: ci.yml
app/: main.c  main.cpp  main.f90
src/: cpu_count.cpp
